apps/loki/logi-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki-route
  namespace: loki
spec:
  routes:
    - match: Headers("Service", "loki")
      kind: Rule
      services:
        - name: loki
          port: 3100
