apps/loki/loki-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki-route
  namespace: loki
spec:
  routes:
    - match: HostRegexp(`loki.{domain:[a-z\.]+}`)
      kind: Rule
      services:
        - name: loki
          port: 3100
